# opengl_raytracing

./: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Camera.cpp  Camera.h  Config.cpp  Config.h  MeshObject.cpp  MeshObject.h  OpenGLDisplay.cpp  OpenGLDisplay.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  glad.c  main.cpp  shader.h
assets/scenes/: MainScene.json
assets/shaders/: fragment_shader.glsl  quad_fs.glsl  shadow_vertex_shader.glsl  vertex_shader.glsl
